--- a/public/assets/css/deskstyle.css
+++ b/public/assets/css/deskstyle.css
@@ -10,18 +10,15 @@
     padding: 10px 20px;
     background: #eee;
     border: 1px solid #aaa;
-
+    margin-bottom: 20px;
+    box-shadow: 0px 5px 25px 0px rgb(83, 78, 78);
 }
 
 .panel-container {
     position: relative;
     display: block;
     padding: 5px;
-    /* margin: 5px; */
-    /* background: #eee; */
-    border: 1px solid #b61b1b;
-    /* border-radius: 5px; */
-}
+  }
 
 .card-container {
     position: absolute;
@@ -66,22 +63,25 @@
 
 .container-post .username {
     padding: 5px 10px;
-    border :1px solid #aaa;
+    border: 1px solid #aaa;
     border-radius: 5px;
     background-color: white;
     color: rgb(10, 10, 179);
-    font-weight: 800;
+    font-weight: 700;
+    font-size: 16px;
 }
 
 .illu {
     width: 100%;
     height: 300px;
     text-align: center;
-  
+
 }
-.container-post .text{
+
+.container-post .text {
     margin: 10px auto;
 }
+
 .date {
     color: #aaa;
     text-align: end;
