--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -11,11 +11,19 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
-.div-form{
-    width: auto;
+form{
+    width: 70%;
     max-height: 100%;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    background-color:white
+}
+form .titel{
+    font-family: "Times New Roman", Times, serif;
+    /* font-style: italic; */
+    font-weight: 800;
+    color:#267033;
+    text-shadow: -2px -2px 3px #aaa;
 }
