--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -13,7 +13,7 @@
 }
 form{
     width: 70%;
-    max-height: 100%;
+    /* max-height: 100%; */
     position: absolute;
     left: 50%;
     top: 50%;
