--- a/public/assets/css/deskstyle.css
+++ b/public/assets/css/deskstyle.css
@@ -79,11 +79,11 @@
     background-color: #0a0ab3;
     color: white;
 }
-
+.container-post img{
+    width: 100%;
+}
 .illu {
     width: 100%;
-    height: 300px;
-    text-align: center;
 }
 
 .container-post .text {
