--- a/public/assets/css/deskstyle.css
+++ b/public/assets/css/deskstyle.css
@@ -10,7 +10,7 @@
     z-index: 3000;
     padding: 10px;
     margin: 0;
-    background: #0a0ab3;
+    background: var(--myColor);
     color: white;
     border: 1px solid #aaa;
     box-shadow: 0px 5px 25px 0px rgb(83, 78, 78);
@@ -70,13 +70,13 @@
     border: 1px solid #aaa;
     border-radius: 5px;
     background-color: white;
-    color: rgb(10, 10, 179);
+    color: var(--myColor);
     font-weight: 700;
     font-size: 16px;
 }
 
 .container-post .myPost {
-    background-color: #0a0ab3;
+    background-color: var(--myColor);
     color: white;
 }
 .container-post img{
@@ -101,13 +101,13 @@
     background: #eee;
     border: 1px solid #aaa;
     border-radius: 20px;
-    color: rgb(10, 10, 179);
+    color:#0a0ab3;
 }
 
 .panel-users-container h3 {
     margin-top: 20px;
     padding: 5px;
     color: white;
-    background-color: rgb(10, 10, 179);
+    background-color:#0a0ab3;
     text-align: center;
 }
